issue_90: fix image overlap when masonry start, re-style recipe

--- a/app/assets/stylesheets/cooking/cooking.css.scss
+++ b/app/assets/stylesheets/cooking/cooking.css.scss
@@ -1,6 +1,11 @@
 .recipe{
+  margin-left:auto;
+  margin-right:auto;
+  margin-bottom: 10px;
   float:left;
-  margin: 5px;
+  padding: 5px;
+  //border: 2px solid grey;
+  background-color:LightGray
 }
 .ingredient{
   float:left;
